2011-09-22  Ojan Vafai  <ojan@chromium.org>

        incorrect height with height:auto and writing-mode:vertical-rl
        https://bugs.webkit.org/show_bug.cgi?id=68497

        Reviewed by David Hyatt.

        I'm not sure I completely understand the changes to the height/width
        of the body/html elements, but the new height/width look correct to me.

        * platform/mac/fast/backgrounds/background-leakage-transforms-expected.txt:
        * platform/mac/fast/table/028-vertical-expected.txt:
        * platform/mac/fast/table/height-percent-test-vertical-expected.txt:
        * platform/mac/fast/writing-mode/fallback-orientation-expected.txt:

2011-10-12  Ojan Vafai  <ojan@chromium.org>

        display:inline-block elements don't correctly handle orthogonal writing-modes
        https://bugs.webkit.org/show_bug.cgi?id=69957

        Reviewed by David Hyatt.

        * fast/writing-mode/borders-expected.html: Added.
        * fast/writing-mode/borders.html: Added.

2011-10-17  Erik Arvidsson  <arv@chromium.org>

        REGRESSION(r97566) fast/js/stack-overflow-arrity-catch.html fails
        https://bugs.webkit.org/show_bug.cgi?id=70210

        Reviewed by Darin Adler.

        Change the test to not call debug() inside the test functions since that fails on V8
        because we are already at the maximum allowed stack depth.

        * fast/js/script-tests/stack-overflow-arrity-catch.js:
        (test1): Changed to not call debug but set a boolean variable that is later checked.
        (test2): Ditto.
        * fast/js/stack-overflow-arrity-catch-expected.txt:
        * platform/chromium/test_expectations.txt:

2011-10-17  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, expectations change.

        Add back in the failing fullscreen tests; also add in some
        flaky failures.


        * platform/chromium/test_expectations.txt:

2011-10-17  Dirk Pranke  <dpranke@chromium.org>
