@@ -1,3 +1,14 @@
+2011-10-17  Gavin Barraclough  <barraclough@apple.com>
+
+        https://bugs.webkit.org/show_bug.cgi?id=70207
+        After deleting __defineSetter__, it is absent but appears in name list
+
+        Reviewed by Darin Adler.
+
+        * fast/js/delete-syntax-expected.txt:
+        * fast/js/script-tests/delete-syntax.js:
+            - Added test case for getOwnPropertyNames.
+
 2011-09-22  Ojan Vafai  <ojan@chromium.org>
 
         incorrect height with height:auto and writing-mode:vertical-rl
